--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,7 +1,9 @@
 <% include partials/header %>
 
-<h1>This is the secret page!</h1>
-<p>What's the secret?</p>
-<strong>I am a sleepy, silly bear</strong>
-
+<div class="container" style="text-align:center">
+  <h1>This is the secret page!</h1>
+  <img src="/assets/images/secret.jpeg" alt="" />
+  <h2>Unless... you registered and signed in...</h2>
+</div>
+<div></div>
 <% include partials/footer %>
