--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -5,5 +5,9 @@
   <img src="/assets/images/secret.jpeg" alt="" />
   <h2>Unless... you registered and signed in...</h2>
 </div>
-<div></div>
+<div class="jumbotron" style="text-align:center">
+  <h2>Also, here's some of your information</h2>
+  <p><strong>Name:</strong> <%=user.firstName%> <%=user.lastName%></p>
+  <p><strong>Age:</strong> <%=user.age%></p>
+</div>
 <% include partials/footer %>
