--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,15 @@
 <% include partials/header %>
 
-<h1>Howdy!</h1>
-<p>This will eventually grow to be a note-taking application I can use.</p>
-<p>
-   But since I don't want people reading the notes I take, I decided to focus on
-   securing the app first.
-</p>
-<a href="/secret">Go to Secret Page?</a>
-
+<div class="container">
+  <h1>Howdy!</h1>
+  <p>This will eventually grow to be a note-taking application I can use.</p>
+  <p>
+    But since I don't want people reading the notes I take, I decided to focus
+    on securing the app first.
+  </p>
+  <a href="/secret">Go to Secret Page?</a>
+</div>
+<div class="container-fluid">
+  <img src="/assets/images/estuary.jpeg" class="img-thumbnail" />
+</div>
 <% include partials/footer %>
