--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,14 @@
                         <a href="/" class="navbar-brand">Estuary</a>
                     </div>
                     <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link" href="/secret">Secret Page</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/notes">Notes</a>
+                          </li>
+                        </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <% if(!user){ %>
                             <li><a href="/login">Login</a></li>
