--- a/views/notes/index.ejs
+++ b/views/notes/index.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header %>
 
 <h1>Here be the notes page!</h1>
-
+<h1><%=user.notes.length%></h1>
+<a href="notes/new">new note</a>
 <% include ../partials/footer %>
