adding to new route

--- a/views/notes/index.ejs
+++ b/views/notes/index.ejs
@@ -1,5 +1,7 @@
 <% include ../partials/header %>
 
 <h1>Here be the notes page!</h1>
-
+<a href="/notes/new"
+  ><button class="btn btn-success">Create New Note</button></a
+>
 <% include ../partials/footer %>
