I added dotenv and created a .env file that will make sure my credentials aren't loaded to github. I started creating model, view, controller for the free write part of this application. Some modeifications to pages and styling

--- a/views/freeWrites/index.ejs
+++ b/views/freeWrites/index.ejs
@@ -1,9 +1,8 @@
 <% include ../partials/header %>
 
-<h1>Here be the notes page!</h1>
-<h1><%=user.notes.length%></h1>
-<a href="notes/new">new note</a>
-<a href="/notes/new"
+<h1>Here be the Free Writes page!</h1>
+<h1><%=user.freeWrites.length%></h1>
+<a href="/free-writes/new"
   ><button class="btn btn-success">Create New Note</button></a
 >
 
