--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
                             <a class="nav-link" href="/secret">Secret Page</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="/notes">Notes</a>
+                            <a class="nav-link" href="/free-writes">Free Writes</a>
                           </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
