made some changes to my views to help with understanding what the app was doing; user can now add free writes to their app.

--- a/views/freeWrites/index.ejs
+++ b/views/freeWrites/index.ejs
@@ -1,7 +1,8 @@
 <% include ../partials/header %>
 
 <h1>Here be the Free Writes page!</h1>
-<h1><%=user.freeWrites.length%></h1>
+<h1>Number of Free Writes: <%=user.freeWrites.length%></h1>
+<p><%=user.freeWrites%></p>
 <a href="/free-writes/new"
   ><button class="btn btn-success">Create New Note</button></a
 >
