--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>YelpCamp</title>
+        <title>Estuary</title>
         <link
             rel="stylesheet"
             type="text/css"
