--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -10,4 +10,5 @@
   <p><strong>Name:</strong> <%=user.firstName%> <%=user.lastName%></p>
   <p><strong>Age:</strong> <%=user.age%></p>
 </div>
+<h1><%=user%></h1>
 <% include partials/footer %>
