--- a/views/freeWrites/new.ejs
+++ b/views/freeWrites/new.ejs
@@ -4,8 +4,14 @@
 <p>Stream of Consciousness Writing</p>
 <form action="/free-writes" method="post">
   <div class="form-group">
-    <input class="form-control" type="text" name="freeWrite[title]"
-    placeholder="Title" value=<%=time%> required />
+    <input
+      class="form-control"
+      type="text"
+      name="freeWrite[title]"
+      placeholder="Title"
+      value="<%=time%>"
+      required
+    />
   </div>
   <div class="form-group">
     <textarea
