--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     But since I don't want people reading the notes I take, I decided to focus
     on securing the app first.
   </p>
-  <a href="/secret">Go to Secret Page?</a>
+  <a href="/user">Your Page</a>
 </div>
 <div class="container-fluid">
   <img src="/assets/images/estuary.jpeg" class="img-thumbnail" />
