--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,9 +20,6 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                           <li class="nav-item">
-                            <a class="nav-link" href="/secret">Secret Page</a>
-                          </li>
-                          <li class="nav-item">
                             <a class="nav-link" href="/free-writes">Free Writes</a>
                           </li>
                         </ul>
@@ -32,7 +29,7 @@
                             <li><a href="/register">Register</a></li>
                             <% } else { %>
                             <li>
-                                <a href="#">Signed In As <%=user.username%></a>
+                                <a href="/user">Signed In As <%=user.username%></a>
                             </li>
                             <li><a href="/logout">Logout</a></li>
                             <% } %>
