hard-coded a value for word count and tested that it works as a passed in value

--- a/views/freeWrites/index.ejs
+++ b/views/freeWrites/index.ejs
@@ -8,14 +8,18 @@
   </a>
   <h2>Your Free Writes</h2>
   <% for (let i = user.freeWrites.length - 1; i >= 0; i--) { %>
-    <h3><%= user.freeWrites[i].title %></h3>
-    <p><%= user.freeWrites[i].content %></p>
-    <form action="/free-writes/<%=user.freeWrites[i]._id%>?_method=DELETE" method="POST" class="sidebyside">
-      <button class="btn btn-sm btn-danger">Delete</button>
-    </form>  
-    <hr>
+  <h3><%= user.freeWrites[i].title %></h3>
+  <p><%= user.freeWrites[i].content %></p>
+  <p><%= user.freeWrites[i].wordCount %></p>
+  <form
+    action="/free-writes/<%=user.freeWrites[i]._id%>?_method=DELETE"
+    method="POST"
+    class="sidebyside"
+  >
+    <button class="btn btn-sm btn-danger">Delete</button>
+  </form>
+  <hr />
   <% } %>
-
 </div>
 
 <% include ../partials/footer %>
