--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,9 @@
                           <li class="nav-item">
                             <a class="nav-link" href="/free-writes">Free Writes</a>
                           </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/notes">Notes</a>
+                          </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <% if(!user){ %>
