Updated styling and front-page to properly warn people about the WIP nature of the app. I also updated app.js to work in a test and a prod env based on whether you put test at the end of node app.js on the command line. Connected prod db to mongodb compass

--- a/views/freeWrites/new.ejs
+++ b/views/freeWrites/new.ejs
@@ -1,10 +1,19 @@
 <% include ../partials/header %>
 
 <h1>Free Write</h1>
-<p>Enter any text that comes to mind.</p> 
-<p>If you want to save something as a note, press <strong>Enter</strong> and then begin your note with <strong>#n</strong> or <strong>#N</strong>.</p> 
-<p>When you're finished with your note, press <strong>Enter</strong> again and continue with your free-write.</p> 
-<p>When done, press Submit and both your free-write and any notes you have taken will be saved.</p>
+<p>Enter any text that comes to mind.</p>
+<p>
+  If you want to save something as a note, press <strong>Enter</strong> and then
+  begin your note with <strong>#n</strong> or <strong>#N</strong>.
+</p>
+<p>
+  When you're finished with your note, press <strong>Enter</strong> again and
+  continue with your free-write.
+</p>
+<p>
+  When done, press Submit and both your free-write and any notes you have taken
+  will be saved.
+</p>
 <form action="/free-writes" method="post">
   <div class="form-group">
     <input
