--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,30 @@
 <% include partials/header %>
 
 <div class="container">
-  <h1>Howdy!</h1>
-  <p>This will eventually grow to be a note-taking application I can use.</p>
+  <div class="row justify-content-md-center">
+    <div class="col-md-6">
+      <h1>Estuary</h1>
+      <strong
+        >Where are your streams of thought can flow into an ocean of
+        ideas.</strong
+      >
+      <p>
+        Keep track of stream-of-consciousness writings while saving notes for
+        future reference.
+      </p>
+      <img
+        src="/assets/images/estuary.jpeg"
+        class="img-thumbnail homepage-image"
+      />
+      <hr />
+      <h2 style="color: red; text-align: center">WARNING</h2>
+      <p>
+        This app is still a work in progress. Use it at your own risk and be
+        sure to save any important notes elsewhere unti I am certain that I
+        won't make changes to the app that destroy your data.
+      </p>
+    </div>
+  </div>
 </div>
-<div class="container-fluid">
-  <img src="/assets/images/estuary.jpeg" class="img-thumbnail" />
-</div>
+
 <% include partials/footer %>
