--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,24 +1,20 @@
 <html>
     <head>
         <title>Estuary</title>
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
-        />
+        <link rel="stylesheet" href="/assets/bootstrap.min.css" />
         <link rel="stylesheet" href="/assets/index.css" />
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <!-- <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> -->
-    </head>
+        <script src="/assets/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      </head>
     <body>
         <div class="container">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <a href="/" class="navbar-brand">Estuary</a>
                     </div>
                     <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav">
+                        <ul class="navbar-nav mr-auto">
                           <li class="nav-item">
                             <a class="nav-link" href="/free-writes">Free Writes</a>
                           </li>
@@ -26,15 +22,15 @@
                             <a class="nav-link" href="/notes">Notes</a>
                           </li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
+                        <ul class="navbar-nav mr-right">
                             <% if(!user){ %>
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                             <% } else { %>
-                            <li>
-                                <a href="/user">Signed In As <%=user.username%></a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/user">Signed In As <%=user.username%></a>
                             </li>
-                            <li><a href="/logout">Logout</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                             <% } %>
                         </ul>
                     </div>
