wife asked me to remove debugging data so I did; styling changes to pages; added contents of procfile just in case Heroku needs that

--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,10 @@ hr {
 }
 
 .homepage-image {
-  max-width: 600px;
+  max-width: fit-content;
   width: 100%;
+}
+
+div .container {
+  padding-top: 5%;
 }
