--- a/views/freeWrites/new.ejs
+++ b/views/freeWrites/new.ejs
@@ -1,44 +1,49 @@
 <% include ../partials/header %>
-
-<h1>Free Write</h1>
-<p>Enter any text that comes to mind.</p>
-<p>
-  If you want to save something as a note, press <strong>Enter</strong> and then
-  begin your note with <strong>#n</strong> or <strong>#N</strong>.
-</p>
-<p>
-  When you're finished with your note, press <strong>Enter</strong> again and
-  continue with your free-write.
-</p>
-<p>
-  When done, press Submit and both your free-write and any notes you have taken
-  will be saved.
-</p>
-<form action="/free-writes" method="post">
-  <div class="form-group">
-    <input
-      class="form-control"
-      type="text"
-      name="freeWrite[title]"
-      placeholder="Title"
-      value="<%=time%>"
-      required
-    />
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-md-10">
+      <h1>Free Write</h1>
+      <p>Enter any text that comes to mind.</p>
+      <p>
+        If you want to save something as a note, press <strong>Enter</strong> and then
+        begin your note with <strong>#n</strong> or <strong>#N</strong>.
+      </p>
+      <p>
+        When you're finished with your note, press <strong>Enter</strong> again and
+        continue with your free-write.
+      </p>
+      <p>
+        When done, press Submit and both your free-write and any notes you have taken
+        will be saved.
+      </p>
+      <form action="/free-writes" method="post">
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="freeWrite[title]"
+            placeholder="Title"
+            value="<%=time%>"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <textarea
+            class="form-control"
+            name="freeWrite[content]"
+            rows="10"
+            required
+          ></textarea>
+          <!-- TODO: Style textarea -->
+        </div>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary btn-block">
+            Submit
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <textarea
-      class="form-control"
-      name="freeWrite[content]"
-      rows="10"
-      required
-    ></textarea>
-    <!-- TODO: Style textarea -->
-  </div>
-  <div class="form-group">
-    <button class="btn btn-lg btn-primary btn-block">
-      Submit
-    </button>
-  </div>
-</form>
+</div>
 
 <% include ../partials/footer %>
