--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row justify-content-md-center">
-    <div class="col-md-6">
+    <div class="col-md-8">
       <h1>Estuary</h1>
       <strong
         >Where are your streams of thought can flow into an ocean of
@@ -14,10 +14,10 @@
       </p>
       <img
         src="/assets/images/estuary.jpeg"
-        class="img-thumbnail homepage-image"
+        class="rounded mx-auto d-block homepage-image"
       />
       <hr />
-      <h2 style="color: red; text-align: center">WARNING</h2>
+      <h2 style="color: red;">WARNING</h2>
       <p>
         This app is still a work in progress. Use it at your own risk and be
         sure to save any important notes elsewhere unti I am certain that I
