--- a/views/notes/index.ejs
+++ b/views/notes/index.ejs
@@ -1,21 +1,25 @@
 <% include ../partials/header %>
 
 <div class="container">
-  <h1>Notes</h1>
-  <p>Number of Notes: <strong><%=user.notes.length%></strong></p>
-  <a href="/notes/new"><button class="btn btn-success">New Note</button> </a>
-  <h2>Your Notes</h2>
-  <% for (let i = user.notes.length - 1; i >= 0; i--) { %>
-  <p><%= user.notes[i].content %></p>
-  <form
-    action="/notes/<%=user.notes[i]._id%>?_method=DELETE"
-    method="POST"
-    class="sidebyside"
-  >
-    <button class="btn btn-sm btn-danger">Delete</button>
-  </form>
-  <hr />
-  <% } %>
+  <div class="row justify-content-md-center">
+    <div class="col-md-10">
+      <h1>Notes</h1>
+      <p>Number of Notes: <strong><%=user.notes.length%></strong></p>
+      <a href="/notes/new"><button class="btn btn-success">New Note</button> </a>
+      <h2>Your Notes</h2>
+      <% for (let i = user.notes.length - 1; i >= 0; i--) { %>
+      <p><%= user.notes[i].content %></p>
+      <form
+        action="/notes/<%=user.notes[i]._id%>?_method=DELETE"
+        method="POST"
+        class="sidebyside"
+      >
+        <button class="btn btn-sm btn-danger">Delete</button>
+      </form>
+      <hr />
+      <% } %>
+    </div>
+  </div>
 </div>
 
 <% include ../partials/footer %>
