--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Estuary</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/assets/bootstrap.min.css" />
         <link rel="stylesheet" href="/assets/index.css" />
         <script src="/assets/bootstrap.min.js"></script>
