--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,30 +2,32 @@
 
 <div class="container" style="text-align:center">
   <h1>Login</h1>
-  <div style="margin: 30px auto; max-width: 30%;">
-    <form action="/login" method="POST">
-      <div class="form-group">
-        <input
-          class="form-control"
-          type="text"
-          name="username"
-          placeholder="username"
-        />
-      </div>
-      <div class="form-group">
-        <input
-          class="form-control"
-          type="password"
-          name="password"
-          placeholder="password"
-        />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-lg btn-primary btn-block">
-          Register
-        </button>
-      </div>
-    </form>
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="username"
+            placeholder="username"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder="password"
+          />
+        </div>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary btn-block">
+            Register
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 <% include partials/footer %>
