--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,10 +1,9 @@
 <% include partials/header %>
 
 <div class="container">
-  <div class="row justify-content-md-center">
-    <div class="col-md-8">
+  <div class="row justify-content-center">
+    <div class="col-10">
       <h1 style="text-align:center">Create User</h1>
-      <div style="margin: 30px auto; max-width: 30%;">
         <form action="/register" method="post">
           <div class="form-group">
             <input
