--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,20 @@
 <% include partials/header %>
 
 <div class="container">
+  <div class="jumbotron">
+    <h2>Warning</h2>
+    <p>
+      This app is still a work in progress. Use it at your own risk and be sure
+      to save any important notes elsewhere until I am certain that I won't make
+      changes to the app that destroy your data.
+    </p>
+    <p>
+      <strong>Code:</strong>
+      <a href="https://github.com/cpustejovsky/estuary"
+        >https://github.com/cpustejovsky/estuary</a
+      >
+    </p>
+  </div>
   <div class="row justify-content-md-center">
     <div class="col-md-8">
       <h1>Estuary</h1>
@@ -16,13 +30,6 @@
         src="/assets/images/estuary.jpeg"
         class="rounded mx-auto d-block homepage-image"
       />
-      <hr />
-      <h2 style="color: red;">WARNING</h2>
-      <p>
-        This app is still a work in progress. Use it at your own risk and be
-        sure to save any important notes elsewhere unti I am certain that I
-        won't make changes to the app that destroy your data.
-      </p>
     </div>
   </div>
 </div>
