--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
   <h1><%=user.username%></h1>
@@ -7,5 +7,8 @@
     <li><strong>Name:</strong> <%=user.firstName%> <%=user.lastName%></li>
     <li><strong>Age:</strong> <%=user.age%></li>
   </ul>
+  <a href="/user/edit"
+    ><button class="btn btn-primary">Edit User Info</button></a
+  >
 </div>
-<% include partials/footer %>
+<% include ../partials/footer %>
