--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -4,15 +4,15 @@
   <div class="row justify-content-center">
     <div class="col-10">
       <h1 style="text-align:center">Edit User</h1>
-        <form action="/edit" method="post">
-          <div class="form-group">
+        <form action="/user?_method=PUT"" method="POST">
+          <!-- <div class="form-group">
             <input
               class="form-control"
               type="text"
               name="username"
               value="<%=user.username%>"
             />
-          </div>
+          </div> -->
           <div class="form-group">
             <input
               class="form-control"
@@ -37,14 +37,14 @@
               value="<%=user.age%>"
             />
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input
               class="form-control"
               type="password"
               name="password"
               placeholder="Re-enter your password"
             />
-          </div>
+          </div> -->
           <div class="form-group">
             <button class="btn btn-lg btn-primary btn-block">
               Update
