--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,14 +1,14 @@
 <% include ../partials/header %>
-
 <div class="container">
-  <h1><%=user.username%></h1>
-  <h3>Your information</h3>
-  <ul>
-    <li><strong>Name:</strong> <%=user.firstName%> <%=user.lastName%></li>
-    <li><strong>Age:</strong> <%=user.age%></li>
-  </ul>
-  <a href="/user/edit"
-    ><button class="btn btn-primary">Edit User Info</button></a
-  >
-</div>
-<% include ../partials/footer %>
+  <div class="row justify-content-md-center">
+    <div class="col-md-10">
+      <h1><%=user.username%></h1>
+      <h3>Your information</h3>
+      <ul>
+        <li><strong>Name:</strong> <%=user.firstName%> <%=user.lastName%></li>
+        <li><strong>Age:</strong> <%=user.age%></li>
+      </ul>
+      <a href="/user/edit"><button class="btn btn-primary">Edit User Info</button></a>
+    </div>
+  </div>
+  <% include ../partials/footer %>
