--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,14 @@
             <input
               class="form-control"
               type="text"
+              name="user[email]"
+              placeholder="your email address"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              class="form-control"
+              type="text"
               name="user[firstName]"
               placeholder="First Name"
             />
