--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -5,14 +5,14 @@
     <div class="col-10">
       <h1 style="text-align:center">Edit User</h1>
         <form action="/user?_method=PUT"" method="POST">
-          <!-- <div class="form-group">
+          <div class="form-group">
             <input
               class="form-control"
               type="text"
-              name="username"
-              value="<%=user.username%>"
+              name="user[email]"
+              value="<%=user.email%>"
             />
-          </div> -->
+          </div>
           <div class="form-group">
             <input
               class="form-control"
