removed warning jumbotron

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
 <div class="container">
-  <div class="jumbotron">
+  <!-- <div class="jumbotron">
     <h2>Warning</h2>
     <p>
       This app is still a work in progress. Use it at your own risk and be sure
@@ -14,7 +14,7 @@
         >https://github.com/cpustejovsky/estuary</a
       >
     </p>
-  </div>
+  </div> -->
   <div class="row justify-content-md-center">
     <div class="col-md-8">
       <h1>Estuary</h1>
