updated readme to reflect how to start this app on your local machine changeed that command to local instead of start-test for ease of use better formatting for notes email clearer copy for email button on notes page added source code to footer

--- a/views/notes/index.ejs
+++ b/views/notes/index.ejs
@@ -36,7 +36,7 @@
           <input type="hidden" name="user[email]" value="<%=user.email%>" />
           <input type="hidden" name="user[notes]" value="<%=user.notes%>" />
           <input type="hidden" name="user[id]" value="<%=user.id%>" />
-          <button class="btn btn-primary">Send a Test Email</button>
+          <button class="btn btn-primary">Exports Notes in Email</button>
         </form>
       </div>
     </div>
