--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
         <hr>    
-        <p>cpustejovsky 2019</p>
+        <p>cpustejovsky 2019 | <a target="_blank" href="https://github.com/cpustejovsky/estuary">Source Code</a></p>
     </div>
     </body>
 </html>
