--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
           <button class="btn btn-lg btn-primary btn-block">
-            Register
+            Log In
           </button>
         </div>
       </form>
