wife pointed out typo on home page (thank you bunny!); also got the logic set up to email users their notes ever 10s; will need to change that ASAP once it is shown to work in production

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,7 @@
   <div class="row justify-content-md-center">
     <div class="col-md-8">
       <h1>Estuary</h1>
-      <strong
-        >Where are your streams of thought can flow into an ocean of
-        ideas.</strong
-      >
+      <strong>Where all your streams of thought converge.</strong>
       <p>
         Keep track of stream-of-consciousness writings while saving notes for
         future reference.
