--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,10 @@
         Keep track of stream-of-consciousness writings while saving notes for
         future reference.
       </p>
-      <img
-        src="/assets/images/estuary.jpeg"
-        class="rounded mx-auto d-block homepage-image"
-      />
+      <p>
+        <strong>The current date time for the server:</strong> <%=time%>
+      </p>
+      <img src="/assets/images/estuary.jpeg" class="rounded mx-auto d-block homepage-image" />
     </div>
   </div>
 </div>
