added and removed node-cron since I realized what was going wrong with Heroku (free version shutting down after disuse) added moment js time format for footer and for default value of new free writes removed moment js from routes added some css for footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
-        <hr>    
-        <p>cpustejovsky 2019 | <a target="_blank" href="https://github.com/cpustejovsky/estuary">Source Code</a></p>
-    </div>
+        <div class="footer">
+          <hr>    
+          <p ><%= time %> | <a href="https://cpustejovsky.com/">cpustejovsky</a></p>
+        </div>
+      </div>
     </body>
 </html>
