--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                           <li class="nav-item">
+                            <a class="nav-link" href="/about">About</a>
+                          </li>                          
+                          <li class="nav-item">
                             <a class="nav-link" href="/free-writes">Free Writes</a>
                           </li>
                           <li class="nav-item">
