--- a/views/freeWrites/index.ejs
+++ b/views/freeWrites/index.ejs
@@ -8,19 +8,15 @@
         <span
           ><a href="/free-writes/new"
             ><button class="btn btn-success">New Free Write</button>
-          </a></span
-        >
+          </a>
+          <a href="/free-writes/upload"
+            ><button class="btn btn-primary">
+              Upload
+            </button></a
+          >
+        </span>
       </h1>
-      <form action="/free-writes/upload" method="POST" enctype="multipart/form-data">
-        <div class="form-group">
-          <input type="file" name="testFile" id="" required />
-        </div>
-        <div class="form-group">
-          <button class="btn btn-sm btn-primary">
-            Submit
-          </button>
-        </div>
-      </form>
+
       <p>Number of Free Writes: <strong><%=user.freeWrites.length%></strong></p>
       <% if (user.freeWrites.length > 0) { %>
       <hr />
