--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -67,6 +67,13 @@
             </button>
           </div>
         </form>
+            <button class="btn btm-sm btn-danger" onclick="deleteUser()">Delete</button> 
+  
+    <script> 
+        function deleteUser() { 
+            confirm("Are you sure you want to delete your user account?"); 
+        } 
+    </script> 
       </div>
     </div>
   </div>
