--- a/views/freeWrites/index.ejs
+++ b/views/freeWrites/index.ejs
@@ -3,19 +3,15 @@
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-md-10">
-      <h1>
-        Free Writes
-        <span
-          ><a href="/free-writes/new"
-            ><button class="btn btn-success">New Free Write</button>
-          </a>
-          <a href="/free-writes/upload"
-            ><button class="btn btn-primary">
-              Upload
-            </button></a
-          >
-        </span>
-      </h1>
+      <div>
+        <h1>
+          Free Writes
+        </h1>
+        <a href="/free-writes/new"><button class="btn btn-success">New Free Write</button></a>
+        <a href="/free-writes/upload"><button class="btn btn-primary">
+            Upload
+          </button></a>
+      </div>
 
       <p>Number of Free Writes: <strong><%=user.freeWrites.length%></strong></p>
       <% if (user.freeWrites.length > 0) { %>
@@ -25,11 +21,7 @@
       <h3><%= user.freeWrites[i].title %></h3>
       <div><%= user.freeWrites[i].content %></div>
       <p><strong>Word Count: </strong><%= user.freeWrites[i].wordCount %></p>
-      <form
-        action="/free-writes/<%=user.freeWrites[i]._id%>?_method=DELETE"
-        method="POST"
-        class="sidebyside"
-      >
+      <form action="/free-writes/<%=user.freeWrites[i]._id%>?_method=DELETE" method="POST" class="sidebyside">
         <button class="btn btn-sm btn-danger">Delete</button>
       </form>
       <hr />
