small update to upload page

--- a/views/freeWrites/upload.ejs
+++ b/views/freeWrites/upload.ejs
@@ -4,6 +4,7 @@
   <div class="row justify-content-md-center">
     <div class="col-md-10">
       <h1>Upload Free Write</h1>
+      <p>Please upload <strong>.txt</strong> files only at this time. Work is being done to allow other file formats to be uploaded.</p>
 <hr>
         <form
           action="/free-writes/upload"
