Updating About page to reflect the README on GitHub

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,13 +4,12 @@
   <div class="row justify-content-md-center">
     <div class="col-md-8">
       <h1>What is Estuary?</h1>
+      <p>Thanksgiving weekend 2019, I started reading
+        <a href="https://www.amazon.com/Getting-Things-Done-Stress-Free-Productivity/dp/0143126563" target="_blank" rel="noreferrer">Getting Things Done by David Allen</a>.
+        During my plane rides, I had the idea to turn my note taking app, Estuary, into an app that could facilitate the GTD process.
+      </p>
       <p>
-        I created Estuary as a test project. I wanted something with similar
-        functionality to
-        <a href="https://750words.com" target="_blank">750 Words</a> but with
-        more customizability for me personally. And that's what this app is: a
-        testing ground for increased functionality and more features using
-        NodeJS and MongoDB
+        That would have the dual benefit of cementing these practices for me and also building a robust app that I can proudly show off in my portfolio.
       </p>
       <h3>What can Estuary do so far?</h3>
       <p>Well, you can do the following:</p>
