setting up boilerplate for password reset

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,7 @@
           </button>
         </div>
       </form>
+      <a href="/password-reset">Forgot Your Password?</a>
     </div>
   </div>
 </div>
