--- a/views/password-reset.ejs
+++ b/views/password-reset.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
 <div class="container" style="text-align:center">
-    <h1>Login</h1>
+    <h1>Reset Your Password</h1>
     <div class="row justify-content-center">
         <div class="col-10">
             <form action="/password-reset" method="POST">
