--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,9 +1,11 @@
-textarea{
+textarea {
   resize: both;
   height: 200px;
   width: 400px;
 }
-
+.notes {
+  max-width: 600px;
+}
 .margin-top {
   margin-top: 5%;
 }
@@ -11,18 +13,22 @@ textarea{
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  max-width: 400px;
   &__notes {
-    max-width: 400px;
     margin: 0 auto;
+    margin-top: 20px;
+    h3 {
+      margin: 0;
+    }
   }
   &__auth {
     margin: 10px;
     width: 275px;
     border-radius: 15px;
   }
-  &__text{
-    &__left{
+  &__text {
+    &__left {
       padding-right: 15px;
     }
   }
