--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -22,7 +22,7 @@
   justify-content: center;
   margin: 0 auto;
   margin-top: 20px;
-  h4 {
+  h1, h2, h3, h4, h5, button {
     margin: 0;
   }
   &__free-writes {
