--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,50 +1,5 @@
-.textarea {
-  resize: both;
-  &__notes{
-    height: 200px;
-    width: 400px;
-  }
-  &__freewrites{
-    height: 400px;
-    min-width: 200px;
-  }
-}
-.notes {
-  max-width: 600px;
-}
-.margin-top {
-  margin-top: 5%;
-}
-.button {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  margin-top: 20px;
-  h1, h2, h3, h4, h5, button {
-    margin: 0;
-  }
-  &__free-writes {
-    max-width: 600px
-  }
-  &__notes {
-    max-width: 400px;
-
-  }
-  &__auth {
-    margin: 10px;
-    width: 275px;
-    border-radius: 15px;
-  }
-  &__text {
-    &__left {
-      padding-right: 25px;
-    }
-    &__right {
-      padding-left: 25px;
-    }
-  }
+body {
+  background-color: #dcdcdc;
 }
 
 .site {
@@ -66,8 +21,6 @@
     flex-flow: column nowrap;
     align-items: center;
   }
-  &__about {
-  }
   &__auth {
     min-width: 40vw;
     display: flex;
@@ -86,4 +39,63 @@
       margin: 0 5px;
     }
   }
+}
+textarea {
+  background-color: white;
+}
+.textarea {
+  resize: both;
+  &__notes {
+    height: 200px;
+    width: 400px;
+  }
+  &__freewrites {
+    height: 400px;
+    min-width: 200px;
+  }
+}
+.notes {
+  max-width: 600px;
+}
+.margin-top {
+  margin-top: 5%;
+}
+.button {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 20px;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  button {
+    margin: 0;
+  }
+  &__free-writes {
+    max-width: 600px;
+  }
+  &__notes {
+    max-width: 400px;
+  }
+  &__auth {
+    margin: 10px;
+    width: 275px;
+    border-radius: 15px;
+  }
+  &__text {
+    &__left {
+      padding-right: 25px;
+    }
+    &__right {
+      padding-left: 25px;
+    }
+  }
+}
+
+.click {
+  cursor: pointer;
 }
