--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -30,7 +30,7 @@ body {
       min-width: 50px;
     }
   }
-  &__about{
+  &__about {
     background-color: white;
     max-width: 1040px;
     padding-bottom: 25px;
@@ -54,8 +54,10 @@ textarea {
   &__notes {
     height: 100px;
     width: 400px;
+    max-width: 800px;
+    max-height: 400px;
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
     outline: none;
   }
   &__freewrites {
@@ -65,6 +67,7 @@ textarea {
 }
 .notes {
   max-width: 400px;
+  margin: 0 auto;
 }
 .margin-top {
   margin-top: 5%;
