--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -5,7 +5,7 @@ body {
 .site {
   display: flex;
   flex-direction: column;
-  // padding-top: 100px;
+  padding-top: 80px;
   width: 100vw;
   min-height: 85vh;
   align-items: center;
