small fixes on note delete component; still needs some styling fine-tuning

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -82,6 +82,9 @@ textarea {
 .margin-top {
   margin-top: 5%;
 }
+.padding-horizontal {
+  padding: 0 5%
+}
 .button {
   display: flex;
   flex-flow: row nowrap;
