--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -41,6 +41,11 @@ body {
     padding-bottom: 25px;
     margin-bottom: 0px;
   }
+  &__notes {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
   &__footer {
     padding: 5vh;
     display: flex;
@@ -62,8 +67,10 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   &__notes {
+    justify-self: center;
     height: 100px;
     width: fill;
+    min-width: 300px;
     max-width: 800px;
     max-height: 400px;
     border-radius: 10px;
@@ -76,14 +83,16 @@ textarea {
   }
 }
 .notes {
+  justify-self: center;
+  min-width: 300px;
   max-width: 500px;
-  margin: 0 auto;
+  // margin: 0 auto;
 }
 .margin-top {
   margin-top: 5%;
 }
 .padding-horizontal {
-  padding: 0 5%
+  padding: 0 5%;
 }
 .button {
   display: flex;
