--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -98,7 +98,7 @@ textarea {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin: 0 auto;
   margin-top: 20px;
   h1,
