fixing some linter warnings

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -69,7 +69,7 @@ textarea {
   &__notes {
     justify-self: center;
     height: 100px;
-    width: fill;
+    width: stretch;
     min-width: 400px;
     max-width: 800px;
     max-height: 400px;
