moving padding to site instead of warning

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -7,6 +7,7 @@ body {
   flex-direction: column;
   width: 100vw;
   min-height: 85vh;
+  padding-top: 80px;
   align-items: center;
   justify-content: space-between;
   &__warning {
