--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -29,18 +29,9 @@ body {
     margin-bottom: 0px;
   }
   &__notes {
+    display: flex;
+    flex-flow: column nowrap;
     align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
-  &__footer {
-    padding: 5vh;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    &__icon {
-      margin: 0 5px;
-    }
   }
 }
 textarea {
@@ -57,7 +48,6 @@ textarea {
     justify-self: center;
     height: 100px;
     width: stretch;
-    min-width: 400px;
     max-width: 800px;
     max-height: 400px;
     border-radius: 10px;
