--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -7,20 +7,26 @@ body {
   display: flex;
   justify-content: center;
 }
+textarea {
+  background-color: white;
+  font-family: inherit;
+  font-size: inherit;
+}
 .site {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 100vw;
   &__about {
     background-color: white;
     max-width: 1040px;
     padding-bottom: 25px;
   }
-}
-textarea {
-  background-color: white;
-  font-family: inherit;
-  font-size: inherit;
+  &__note {
+    justify-self: center;
+    min-width: fit-content;
+    width: 386px;
+  }
 }
 .textarea {
   resize: both;
@@ -54,6 +60,7 @@ textarea {
   padding: 0 5%;
 }
 .button {
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
