fix display issues of freewrites mobile and esktop

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -30,6 +30,11 @@ textarea {
     max-width: 400px;
   }
 }
+.freewrites{
+  // min-width: 1040px;
+  max-width: 100%;
+  width: 800px;
+}
 .textarea {
   resize: both;
   margin: auto 0;
